methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:2: error: not found: type color
def hunt(c:color) {
           ^SlugSnail:20: error: value c is not a member of object java.awt.Color
  if (getCouleurSol == Color.c){
                             ^